y.output
   0  $accept : program $end

   1  program : statement_list

   2  statement_list : statement
   3                 | statement_list statement

   4  statement : assignment SEMICOLON
   5            | declaration SEMICOLON
   6            | loop
   7            | condition
   8            | GOTO COLON flag SEMICOLON
   9            | COMMENT
  10            | function_call SEMICOLON
  11            | BREAK SEMICOLON
  12            | CONTINUE SEMICOLON
  13            | RETURN SEMICOLON
  14            | RETURN IDNTF SEMICOLON
  15            | RETURN factor SEMICOLON

  16  block : LEFT_BRACKET statement_list RIGHT_BRACKET
  17        | LEFT_BRACKET empty RIGHT_BRACKET

  18  declaration : data_type IDNTF
  19              | declaration assignment_operator RHS
  20              | ARRAY data_type IDNTF LEFT_SQ_BRACKET INT_LTRL RIGHT_SQ_BRACKET ASSIGNMENT_OPT LEFT_BRACKET factor_list RIGHT_BRACKET

  21  factor_list : factor
  22              | factor_list COMMA factor

  23  RHS : arithmetic_expression
  24      | function_call
  25      | boolean_expression

  26  function_call : BLTIN_PRINT LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS
  27                | BLTIN_LIST_CONTENTS LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS
  28                | BLTIN_GET_SIZE LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS
  29                | BLTIN_CREATE LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS
  30                | BLTIN_COPY LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS
  31                | BLTIN_COMPARE LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS
  32                | BLTIN_CONNECT_TO LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS
  33                | BLTIN_DELETE LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS
  34                | BLTIN_RENAME LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS
  35                | BLTIN_MOVE LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS
  36                | BLTIN_SORT LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS
  37                | BLTIN_FILTRE_FILES LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS
  38                | BLTIN_BACK_UP LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS
  39                | BLTIN_SYNCHRONIZE LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS
  40                | BLTIN_SEARCH LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS
  41                | BLTIN_CD LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS
  42                | BLTIN_DOWNLOAD LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS
  43                | BLTIN_UPLOAD LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS
  44                | BLTIN_OPEN LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS
  45                | BLTIN_PROPERTIES LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS
  46                | BLTIN_MOVE_BACK LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS
  47                | BLTIN_MOVE_FORWARD LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS

  48  identifier_list : empty
  49                  | IDNTF
  50                  | identifier_list COMMA IDNTF
  51                  | factor
  52                  | identifier_list COMMA factor

  53  arithmetic_expression : factor
  54                        | arithmetic_expression binary_operator factor
  55                        | binary_operator arithmetic_expression

  56  binary_operator : ADD_OPT
  57                  | SUB_OPT
  58                  | MULTIPLY_OPT
  59                  | DIVIDE_OPT
  60                  | POW_OPT
  61                  | MODE_OPT
  62                  | BITWISE_LEFTSHIFT
  63                  | BITWISE_RIGHTSHIFT
  64                  | BITWISE_AND
  65                  | BITWISE_OR
  66                  | BITWISE_XOR
  67                  | BITWISE_NOR
  68                  | BITWISE_NOT

  69  factor : INT_LTRL
  70         | FLT_LTRL
  71         | STR_LTRL
  72         | CHR_LTRL
  73         | DOUBLE_LTRL

  74  assignment_operator : ASSIGNMENT_OPT
  75                      | MULTIPLY_ASSIGNMENT_OPT
  76                      | DIVIDE_ASSIGNMENT_OPT
  77                      | ADD_ASSIGNMENT_OPT
  78                      | SUB_ASSIGNMENT_OPT
  79                      | MODE_ASSIGNMENT_OPT
  80                      | POW_ASSIGNMENT_OPT

  81  assignment : LHS assignment_operator RHS
  82             | LHS INCREMENT_OPT
  83             | LHS DECREMENT_OPT

  84  LHS : IDNTF
  85      | IDNTF LEFT_SQ_BRACKET INT_LTRL RIGHT_SQ_BRACKET

  86  loop : while_loop
  87       | do_while_loop
  88       | for_loop

  89  while_loop : WHILE LEFT_PARANTHESIS boolean_expression RIGHT_PARANTHESIS block

  90  do_while_loop : do_statement WHILE LEFT_PARANTHESIS boolean_expression RIGHT_PARANTHESIS SEMICOLON

  91  do_statement : DO block

  92  for_loop : FOR LEFT_PARANTHESIS for_statement RIGHT_PARANTHESIS block

  93  for_statement : declaration SEMICOLON boolean_expression SEMICOLON assignment

  94  condition : if_statement
  95            | switch_statement

  96  if_statement : IF LEFT_PARANTHESIS boolean_expression RIGHT_PARANTHESIS block
  97               | IF LEFT_PARANTHESIS function_call RIGHT_PARANTHESIS block
  98               | if_statement ELIF LEFT_PARANTHESIS boolean_expression RIGHT_PARANTHESIS block
  99               | if_statement ELSE block
 100               | IFNOT LEFT_PARANTHESIS boolean_expression RIGHT_PARANTHESIS block

 101  boolean_expression : comparison
 102                     | IDNTF
 103                     | BLN_FALSE
 104                     | BLN_TRUE
 105                     | NOT_OPT IDNTF

 106  comparison : boolean_expression boolean_operators compared
 107             | factor relational_operators factor
 108             | IDNTF relational_operators factor
 109             | factor relational_operators IDNTF
 110             | IDNTF relational_operators IDNTF

 111  compared : IDNTF
 112           | BLN_FALSE
 113           | BLN_TRUE
 114           | NOT_OPT IDNTF

 115  relational_operators : LESSEQ_OPT
 116                       | GREATEREQ_OPT
 117                       | NEQ_OPT
 118                       | EQ_OPT
 119                       | LESS_OPT
 120                       | GREATER_OPT

 121  boolean_operators : AND_OPT
 122                    | OR_OPT

 123  switch_statement : SWITCH LEFT_PARANTHESIS IDNTF RIGHT_PARANTHESIS LEFT_BRACKET case_statement RIGHT_BRACKET
 124                   | SWITCH LEFT_PARANTHESIS IDNTF LEFT_SQ_BRACKET IDNTF RIGHT_SQ_BRACKET RIGHT_PARANTHESIS LEFT_BRACKET case_statement RIGHT_BRACKET

 125  case_statement : CASE IDNTF COLON statement_list
 126                 | CASE factor COLON statement_list
 127                 | case_statement CASE IDNTF COLON statement_list
 128                 | case_statement CASE factor COLON statement_list
 129                 | case_statement DEFAULT COLON statement_list

 130  data_type : CHAR
 131            | INT
 132            | FLOAT
 133            | BOOL
 134            | BYTE
 135            | STRING
 136            | DOUBLE
 137            | FE
 138            | DIRECTORY
 139            | LONG_INT
 140            | SHORT_INT
 141            | SHORT_FLOAT
 142            | LONG_DOUBLE

 143  flag : UNDER_SCORE UNDER_SCORE IDNTF UNDER_SCORE UNDER_SCORE

 144  empty :

state 0
	$accept : . program $end  (0)

	INT  shift 1
	FLOAT  shift 2
	BOOL  shift 3
	CHAR  shift 4
	ARRAY  shift 5
	BYTE  shift 6
	STRING  shift 7
	DOUBLE  shift 8
	FE  shift 9
	DIRECTORY  shift 10
	LONG_INT  shift 11
	SHORT_INT  shift 12
	SHORT_FLOAT  shift 13
	LONG_DOUBLE  shift 14
	IF  shift 15
	SWITCH  shift 16
	IFNOT  shift 17
	WHILE  shift 18
	DO  shift 19
	BREAK  shift 20
	CONTINUE  shift 21
	FOR  shift 22
	RETURN  shift 23
	BLTIN_PRINT  shift 24
	BLTIN_LIST_CONTENTS  shift 25
	BLTIN_GET_SIZE  shift 26
	BLTIN_CREATE  shift 27
	BLTIN_COPY  shift 28
	BLTIN_COMPARE  shift 29
	BLTIN_CONNECT_TO  shift 30
	BLTIN_DELETE  shift 31
	BLTIN_RENAME  shift 32
	BLTIN_MOVE  shift 33
	BLTIN_SORT  shift 34
	BLTIN_FILTRE_FILES  shift 35
	BLTIN_SYNCHRONIZE  shift 36
	BLTIN_SEARCH  shift 37
	BLTIN_CD  shift 38
	BLTIN_BACK_UP  shift 39
	BLTIN_DOWNLOAD  shift 40
	BLTIN_UPLOAD  shift 41
	BLTIN_OPEN  shift 42
	BLTIN_PROPERTIES  shift 43
	BLTIN_MOVE_BACK  shift 44
	BLTIN_MOVE_FORWARD  shift 45
	IDNTF  shift 46
	GOTO  shift 47
	COMMENT  shift 48
	.  error

	program  goto 49
	statement_list  goto 50
	statement  goto 51
	assignment  goto 52
	declaration  goto 53
	loop  goto 54
	condition  goto 55
	function_call  goto 56
	data_type  goto 57
	LHS  goto 58
	while_loop  goto 59
	do_while_loop  goto 60
	for_loop  goto 61
	do_statement  goto 62
	if_statement  goto 63
	switch_statement  goto 64


state 1
	data_type : INT .  (131)

	.  reduce 131


state 2
	data_type : FLOAT .  (132)

	.  reduce 132


state 3
	data_type : BOOL .  (133)

	.  reduce 133


state 4
	data_type : CHAR .  (130)

	.  reduce 130


state 5
	declaration : ARRAY . data_type IDNTF LEFT_SQ_BRACKET INT_LTRL RIGHT_SQ_BRACKET ASSIGNMENT_OPT LEFT_BRACKET factor_list RIGHT_BRACKET  (20)

	INT  shift 1
	FLOAT  shift 2
	BOOL  shift 3
	CHAR  shift 4
	BYTE  shift 6
	STRING  shift 7
	DOUBLE  shift 8
	FE  shift 9
	DIRECTORY  shift 10
	LONG_INT  shift 11
	SHORT_INT  shift 12
	SHORT_FLOAT  shift 13
	LONG_DOUBLE  shift 14
	.  error

	data_type  goto 65


state 6
	data_type : BYTE .  (134)

	.  reduce 134


state 7
	data_type : STRING .  (135)

	.  reduce 135


state 8
	data_type : DOUBLE .  (136)

	.  reduce 136


state 9
	data_type : FE .  (137)

	.  reduce 137


state 10
	data_type : DIRECTORY .  (138)

	.  reduce 138


state 11
	data_type : LONG_INT .  (139)

	.  reduce 139


state 12
	data_type : SHORT_INT .  (140)

	.  reduce 140


state 13
	data_type : SHORT_FLOAT .  (141)

	.  reduce 141


state 14
	data_type : LONG_DOUBLE .  (142)

	.  reduce 142


state 15
	if_statement : IF . LEFT_PARANTHESIS boolean_expression RIGHT_PARANTHESIS block  (96)
	if_statement : IF . LEFT_PARANTHESIS function_call RIGHT_PARANTHESIS block  (97)

	LEFT_PARANTHESIS  shift 66
	.  error


state 16
	switch_statement : SWITCH . LEFT_PARANTHESIS IDNTF RIGHT_PARANTHESIS LEFT_BRACKET case_statement RIGHT_BRACKET  (123)
	switch_statement : SWITCH . LEFT_PARANTHESIS IDNTF LEFT_SQ_BRACKET IDNTF RIGHT_SQ_BRACKET RIGHT_PARANTHESIS LEFT_BRACKET case_statement RIGHT_BRACKET  (124)

	LEFT_PARANTHESIS  shift 67
	.  error


state 17
	if_statement : IFNOT . LEFT_PARANTHESIS boolean_expression RIGHT_PARANTHESIS block  (100)

	LEFT_PARANTHESIS  shift 68
	.  error


state 18
	while_loop : WHILE . LEFT_PARANTHESIS boolean_expression RIGHT_PARANTHESIS block  (89)

	LEFT_PARANTHESIS  shift 69
	.  error


state 19
	do_statement : DO . block  (91)

	LEFT_BRACKET  shift 70
	.  error

	block  goto 71


state 20
	statement : BREAK . SEMICOLON  (11)

	SEMICOLON  shift 72
	.  error


state 21
	statement : CONTINUE . SEMICOLON  (12)

	SEMICOLON  shift 73
	.  error


state 22
	for_loop : FOR . LEFT_PARANTHESIS for_statement RIGHT_PARANTHESIS block  (92)

	LEFT_PARANTHESIS  shift 74
	.  error


state 23
	statement : RETURN . SEMICOLON  (13)
	statement : RETURN . IDNTF SEMICOLON  (14)
	statement : RETURN . factor SEMICOLON  (15)

	INT_LTRL  shift 75
	FLT_LTRL  shift 76
	DOUBLE_LTRL  shift 77
	STR_LTRL  shift 78
	CHR_LTRL  shift 79
	IDNTF  shift 80
	SEMICOLON  shift 81
	.  error

	factor  goto 82


state 24
	function_call : BLTIN_PRINT . LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS  (26)

	LEFT_PARANTHESIS  shift 83
	.  error


state 25
	function_call : BLTIN_LIST_CONTENTS . LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS  (27)

	LEFT_PARANTHESIS  shift 84
	.  error


state 26
	function_call : BLTIN_GET_SIZE . LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS  (28)

	LEFT_PARANTHESIS  shift 85
	.  error


state 27
	function_call : BLTIN_CREATE . LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS  (29)

	LEFT_PARANTHESIS  shift 86
	.  error


state 28
	function_call : BLTIN_COPY . LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS  (30)

	LEFT_PARANTHESIS  shift 87
	.  error


state 29
	function_call : BLTIN_COMPARE . LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS  (31)

	LEFT_PARANTHESIS  shift 88
	.  error


state 30
	function_call : BLTIN_CONNECT_TO . LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS  (32)

	LEFT_PARANTHESIS  shift 89
	.  error


state 31
	function_call : BLTIN_DELETE . LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS  (33)

	LEFT_PARANTHESIS  shift 90
	.  error


state 32
	function_call : BLTIN_RENAME . LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS  (34)

	LEFT_PARANTHESIS  shift 91
	.  error


state 33
	function_call : BLTIN_MOVE . LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS  (35)

	LEFT_PARANTHESIS  shift 92
	.  error


state 34
	function_call : BLTIN_SORT . LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS  (36)

	LEFT_PARANTHESIS  shift 93
	.  error


state 35
	function_call : BLTIN_FILTRE_FILES . LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS  (37)

	LEFT_PARANTHESIS  shift 94
	.  error


state 36
	function_call : BLTIN_SYNCHRONIZE . LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS  (39)

	LEFT_PARANTHESIS  shift 95
	.  error


state 37
	function_call : BLTIN_SEARCH . LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS  (40)

	LEFT_PARANTHESIS  shift 96
	.  error


state 38
	function_call : BLTIN_CD . LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS  (41)

	LEFT_PARANTHESIS  shift 97
	.  error


state 39
	function_call : BLTIN_BACK_UP . LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS  (38)

	LEFT_PARANTHESIS  shift 98
	.  error


state 40
	function_call : BLTIN_DOWNLOAD . LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS  (42)

	LEFT_PARANTHESIS  shift 99
	.  error


state 41
	function_call : BLTIN_UPLOAD . LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS  (43)

	LEFT_PARANTHESIS  shift 100
	.  error


state 42
	function_call : BLTIN_OPEN . LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS  (44)

	LEFT_PARANTHESIS  shift 101
	.  error


state 43
	function_call : BLTIN_PROPERTIES . LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS  (45)

	LEFT_PARANTHESIS  shift 102
	.  error


state 44
	function_call : BLTIN_MOVE_BACK . LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS  (46)

	LEFT_PARANTHESIS  shift 103
	.  error


state 45
	function_call : BLTIN_MOVE_FORWARD . LEFT_PARANTHESIS identifier_list RIGHT_PARANTHESIS  (47)

	LEFT_PARANTHESIS  shift 104
	.  error


state 46
	LHS : IDNTF .  (84)
	LHS : IDNTF . LEFT_SQ_BRACKET INT_LTRL RIGHT_SQ_BRACKET  (85)

	LEFT_SQ_BRACKET  shift 105
	ASSIGNMENT_OPT  reduce 84
	MULTIPLY_ASSIGNMENT_OPT  reduce 84
	DIVIDE_ASSIGNMENT_OPT  reduce 84
	MODE_ASSIGNMENT_OPT  reduce 84
	ADD_ASSIGNMENT_OPT  reduce 84
	SUB_ASSIGNMENT_OPT  reduce 84
	POW_ASSIGNMENT_OPT  reduce 84
	INCREMENT_OPT  reduce 84
	DECREMENT_OPT  reduce 84


state 47
	statement : GOTO . COLON flag SEMICOLON  (8)

	COLON  shift 106
	.  error


state 48
	statement : COMMENT .  (9)

	.  reduce 9


state 49
	$accept : program . $end  (0)

	$end  accept


state 50
	program : statement_list .  (1)
	statement_list : statement_list . statement  (3)

	INT  shift 1
	FLOAT  shift 2
	BOOL  shift 3
	CHAR  shift 4
	ARRAY  shift 5
	BYTE  shift 6
	STRING  shift 7
	DOUBLE  shift 8
	FE  shift 9
	DIRECTORY  shift 10
	LONG_INT  shift 11
	SHORT_INT  shift 12
	SHORT_FLOAT  shift 13
	LONG_DOUBLE  shift 14
	IF  shift 15
	SWITCH  shift 16
	IFNOT  shift 17
	WHILE  shift 18
	DO  shift 19
	BREAK  shift 20
	CONTINUE  shift 21
	FOR  shift 22
	RETURN  shift 23
	BLTIN_PRINT  shift 24
	BLTIN_LIST_CONTENTS  shift 25
	BLTIN_GET_SIZE  shift 26
	BLTIN_CREATE  shift 27
	BLTIN_COPY  shift 28
	BLTIN_COMPARE  shift 29
	BLTIN_CONNECT_TO  shift 30
	BLTIN_DELETE  shift 31
	BLTIN_RENAME  shift 32
	BLTIN_MOVE  shift 33
	BLTIN_SORT  shift 34
	BLTIN_FILTRE_FILES  shift 35
	BLTIN_SYNCHRONIZE  shift 36
	BLTIN_SEARCH  shift 37
	BLTIN_CD  shift 38
	BLTIN_BACK_UP  shift 39
	BLTIN_DOWNLOAD  shift 40
	BLTIN_UPLOAD  shift 41
	BLTIN_OPEN  shift 42
	BLTIN_PROPERTIES  shift 43
	BLTIN_MOVE_BACK  shift 44
	BLTIN_MOVE_FORWARD  shift 45
	IDNTF  shift 46
	GOTO  shift 47
	COMMENT  shift 48
	$end  reduce 1

	statement  goto 107
	assignment  goto 52
	declaration  goto 53
	loop  goto 54
	condition  goto 55
	function_call  goto 56
	data_type  goto 57
	LHS  goto 58
	while_loop  goto 59
	do_while_loop  goto 60
	for_loop  goto 61
	do_statement  goto 62
	if_statement  goto 63
	switch_statement  goto 64


state 51
	statement_list : statement .  (2)

	.  reduce 2


state 52
	statement : assignment . SEMICOLON  (4)

	SEMICOLON  shift 108
	.  error


state 53
	statement : declaration . SEMICOLON  (5)
	declaration : declaration . assignment_operator RHS  (19)

	ASSIGNMENT_OPT  shift 109
	MULTIPLY_ASSIGNMENT_OPT  shift 110
	DIVIDE_ASSIGNMENT_OPT  shift 111
	MODE_ASSIGNMENT_OPT  shift 112
	ADD_ASSIGNMENT_OPT  shift 113
	SUB_ASSIGNMENT_OPT  shift 114
	POW_ASSIGNMENT_OPT  shift 115
	SEMICOLON  shift 116
	.  error

	assignment_operator  goto 117


state 54
	statement : loop .  (6)

	.  reduce 6


state 55
	statement : condition .  (7)

	.  reduce 7


state 56
	statement : function_call . SEMICOLON  (10)

	SEMICOLON  shift 118
	.  error


state 57
	declaration : data_type . IDNTF  (18)

	IDNTF  shift 119
	.  error

